src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Black Raspberry</fullName>
                </value>
                <value>
                    <fullName>Butter Crunch</fullName>
                </value>
                <value>
                    <fullName>Butter Pecan</fullName>
                </value>
                <value>
                    <fullName>Black Bear</fullName>
                </value>
                <value>
                    <fullName>Chocolate Chip Cookie Dough</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Chocolate Chip</fullName>
                </value>
                <value>
                    <fullName>Chocolate Ripple</fullName>
                </value>
                <value>
                    <fullName>Coconut Almond Bar</fullName>
                </value>
                <value>
                    <fullName>Coconut</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Cookies &amp; Cream</fullName>
                </value>
                <value>
                    <fullName>Cotton Candy</fullName>
                </value>
                <value>
                    <fullName>Frozen Pudding</fullName>
                </value>
                <value>
                    <fullName>Ginger</fullName>
                </value>
                <value>
                    <fullName>Graham Central Station</fullName>
                </value>
                <value>
                    <fullName>Grapenut</fullName>
                </value>
                <value>
                    <fullName>English Toffee Crunch</fullName>
                </value>
                <value>
                    <fullName>Extreme Chocolate</fullName>
                </value>
                <value>
                    <fullName>Maple Walnut</fullName>
                </value>
                <value>
                    <fullName>Mint Cookies &amp; Cream</fullName>
                </value>
                <value>
                    <fullName>Mint Chip</fullName>
                </value>
                <value>
                    <fullName>Mississippi Mud</fullName>
                </value>
                <value>
                    <fullName>Mocha Chip</fullName>
                </value>
                <value>
                    <fullName>Moose Tracks</fullName>
                </value>
                <value>
                    <fullName>Orange Pineapple</fullName>
                </value>
                <value>
                    <fullName>Peanut Butter Cup</fullName>
                </value>
                <value>
                    <fullName>Peppermint Stick</fullName>
                </value>
                <value>
                    <fullName>Pistachio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating_Icon__c</fullName>
        <formula>CASE( Rating__c, 
&quot;1&quot;, &quot;utility:arrowdown&quot;,
&quot;2&quot;, &quot;utility:dash&quot;,
&quot;3&quot;, &quot;utility:dash&quot;, 
&quot;4&quot;, &quot;utility:dash&quot;,
&quot;5&quot;, &quot;utility:arrowup&quot;,
&quot;utility:dash&quot;
)</formula>
        <label>Rating Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>